Archive2/8d/726ccf44f32bd9/main.cpp
void func( int x, int x)
{
    return 10 ;
}

int main()
{
    int y = 10, z = 1 ;
    
    func( ++y, z - y ) ;
}